--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -6,13 +6,105 @@
     android:layout_height="match_parent"
     android:background="@color/colorDivider"
     tools:context=".FormActivity">
-    <TextView
-        android:id="@+id/formTitle"
-        android:layout_width="wrap_content"
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="Provide answers to the Questions"/>
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/tv_question"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="What country does this flag belong to?"
+            android:textSize="22sp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"/>
+
+        <ImageView
+            android:id="@+id/iv_image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/burundi_flag"/>
+
+        <LinearLayout
+            android:id="@+id/progress_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical">
+
+            <ProgressBar
+                android:id="@+id/progressB"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_weight="1"
+                android:max="5"
+                android:progress="0"
+                android:minHeight="50dp"
+                android:indeterminate="false"/>
+
+            <TextView
+                android:id="@+id/tvProgress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:text="0/10"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/option_one"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:background="@drawable/option_bg"
+            android:padding="15dp"
+            android:layout_marginTop="10dp"
+            android:text="Burundi"/>
+        <TextView
+            android:id="@+id/option_two"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:background="@drawable/option_bg"
+            android:padding="15dp"
+            android:layout_marginTop="10dp"
+            android:text="Rwanda"/>
+        <TextView
+            android:id="@+id/option_three"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:background="@drawable/option_bg"
+            android:padding="15dp"
+            android:layout_marginTop="10dp"
+            android:text="Egypt"/>
+        <TextView
+            android:id="@+id/option_four"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:background="@drawable/option_bg"
+            android:padding="15dp"
+            android:layout_marginTop="10dp"
+            android:text="Kenya"/>
+
+    </LinearLayout>
+
+    </ScrollView>
 
 
 </RelativeLayout>
